# HPCC_FPGA

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  env.sh
FFT/: .gitignore  CHANGELOG  CMakeLists.txt  README.md
FFT/configs/: Bittware_520N_MX_S7.cmake  Intel_PAC_D5005_S18.cmake  Intel_PAC_D5005_S19.cmake  Nallatech_520N_S17.cmake
FFT/performance/: README.md
FFT/settings/: settings.compile.xilinx.fft1d_float_8.ddr.ini  settings.compile.xilinx.fft1d_float_8.hbm.ini  settings.gen.intel.fft1d_float_8.hbm.py  settings.gen.intel.fft1d_float_8.svm.py  settings.link.xilinx.fft1d_float_8.ddr.ini  settings.link.xilinx.fft1d_float_8.hbm.generator.ini  settings.link.xilinx.fft1d_float_8.ini
FFT/synth-scripts/: build_520nmx.sh  build_pac.sh  synth-fft-noctua.sh
FFT/tests/: CMakeLists.txt  main.cpp  test_execution_functionality.cpp  test_fft_functionality.cpp  test_fpga_setup.cpp
GEMM/: .gitignore  CHANGELOG  CMakeLists.txt  README.md  Readme.md
GEMM/configs/: Bittware_520N_B256.cmake  Bittware_520N_B512.cmake  Bittware_520N_MX_B256.cmake  Intel_PAC_D5005_R5_B256.cmake
GEMM/performance/: README.md  performance_model_cannon.py  requirements.txt
GEMM/scripts/: build_520n_mx.sh  build_pac.sh
GEMM/settings/: settings.compile.xilinx.gemm_cannon.ddr.ini  settings.compile.xilinx.gemm_cannon.hbm.ini  settings.gen.intel.gemm_base.520n_mx.py  settings.gen.intel.gemm_base.hbm.py  settings.gen.intel.gemm_base.svm.py  settings.link.xilinx.gemm_cannon.ddr.generator.ini  settings.link.xilinx.gemm_cannon.ddr.ini  settings.link.xilinx.gemm_cannon.hbm.generator.ini  settings.link.xilinx.gemm_cannon.hbm.ini  settings.link.xilinx.gemm_cannon.ini
GEMM/tests/: CMakeLists.txt  test_kernel_functionality_and_host_integration.cpp
LINPACK/: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  Readme.md
LINPACK/configs/: Nallatech_520N_B10_SB3.cmake  Nallatech_520N_B10_SB3_R4.cmake  Nallatech_520N_B10_SB4.cmake  Nallatech_520N_B8_SB2_R2_DP_noring.cmake  Nallatech_520N_B8_SB2_R5_DP_noring.cmake  Nallatech_520N_B8_SB3_R4.cmake  Nallatech_520N_B8_SB3_R5.cmake  Nallatech_520N_B8_SB3_R7.cmake  Nallatech_520N_B9_SB3_R3.cmake  Nallatech_520N_B9_SB3_R4.cmake  Nallatech_520N_B9_SB3_R4_noring.cmake  Nallatech_520N_B9_SB3_R5_noring.cmake  Xilinx_U250_B8_SB3_R3.cmake  Xilinx_U280_B8_SB3_R1_ACCL.cmake  Xilinx_U280_B8_SB3_R2.cmake  Xilinx_U280_B8_SB3_R2_DDR_ACCL_buffers.cmake  Xilinx_U280_B8_SB3_R2_DDR_PCIE.cmake  Xilinx_U280_B8_SB3_R2_HBM_PCIE_profile.cmake  Xilinx_U280_B8_SB3_R3.cmake  Xilinx_U280_B8_SB3_R3_HBM_PCIE.cmake  Xilinx_U55C_B8_SB3_R1_ACCL.cmake  Xilinx_U55C_B8_SB3_R1_ACCL_profile.cmake  Xilinx_U55C_B8_SB3_R2_ACCL.cmake  Xilinx_U55C_B8_SB3_R2_HBM_PCIE.cmake
LINPACK/scripts/: hpl_model.ipynb
LINPACK/settings/: pre_synthesis.u250.tcl  settings.compile.xilinx.hpl_torus_pcie.u250.ini  settings.link.xilinx.hpl_torus_accl.hbm.generator.ini  settings.link.xilinx.hpl_torus_accl.hbm.u280.generator.ini  settings.link.xilinx.hpl_torus_accl.hbm.u55c.profile.generator.ini  settings.link.xilinx.hpl_torus_pcie.ddr.generator.ini  settings.link.xilinx.hpl_torus_pcie.distribute_kernels.hbm.generator.ini  settings.link.xilinx.hpl_torus_pcie.hbm.generator.ini  settings.link.xilinx.hpl_torus_pcie.hbm.u280.profile.generator.ini  settings.link.xilinx.hpl_torus_pcie.u250.generator.ini  settings.link.xilinx.lu_blocked_pvt.ddr.ini
LINPACK/tests/: CMakeLists.txt  main.cpp  test_host_reference_implementations.cpp  test_kernel_communication.cpp  test_kernel_functionality_and_host_integration.cpp  test_kernel_functionality_separate_cores.cpp  test_program_settings.h  test_torus2x2_operations.cpp
PTRANS/: .gitignore  CHANGELOG  CMakeLists.txt  README.md
PTRANS/configs/: BittWare_520N_MX_pcie.cmake  Nallatech_520N.cmake  Nallatech_520N_CPU.cmake  Nallatech_520N_ch2.cmake  Nallatech_520N_ch2_interleave.cmake  Nallatech_520N_interleave.cmake  Nallatech_520N_pcie.cmake  Xilinx_U250_DDR_PCIE.cmake  Xilinx_U250_DDR_PCIE_unroll.cmake  Xilinx_U280_DDR_ACCL_TCP_buffers.cmake  Xilinx_U280_DDR_ACCL_buffers.cmake  Xilinx_U280_DDR_ACCL_stream.cmake  Xilinx_U280_DDR_PCIE.cmake  Xilinx_U280_HBM_ACCL_stream.cmake  Xilinx_U280_HBM_ACCL_stream_profile.cmake  Xilinx_U55C_HBM_ACCL_stream.cmake  Xilinx_U55C_HBM_ACCL_stream_profile.cmake  Xilinx_U55C_HBM_PCIE.cmake
PTRANS/scripts/: build_520n.sh  build_520n_ch1.sh  build_520n_ch2.sh  build_520n_pcie.sh  build_u250.sh  build_u250_unroll.sh  build_u280_alveo.sh  build_u280_alveo_ddr_singleloop.sh  prepare_tests.sh  run_transpose.sh  run_transpose_gen.sh
PTRANS/settings/: settings.compile.xilinx.transpose_pq_pcie.ddr.ini  settings.compile.xilinx.transpose_pq_pcie.hbm.ini  settings.link.xilinx.transpose_optimized.ddr.ini  settings.link.xilinx.transpose_pq_accl_buffers.ddr.ini  settings.link.xilinx.transpose_pq_accl_stream.ddr.ini  settings.link.xilinx.transpose_pq_accl_stream.hbm.ini  settings.link.xilinx.transpose_pq_accl_stream.hbm.profile.ini  settings.link.xilinx.transpose_pq_accl_stream.hbm.u280.ini  settings.link.xilinx.transpose_pq_accl_stream.hbm.u280.profile.ini  settings.link.xilinx.transpose_pq_accl_tcp_buffers.ddr.ini  settings.link.xilinx.transpose_pq_pcie.ddr.generator.ini  settings.link.xilinx.transpose_pq_pcie.hbm.generator.ini  settings.link.xilinx.transpose_pq_pcie.u250.generator.ini  settings.link.xilinx.transpose_pq_pcie_spread_banks.hbm.generator.ini
PTRANS/tests/: CMakeLists.txt  main.cpp  test_host_functionality.cpp  test_kernel_functionality_and_host_integration.cpp  test_program_settings.h  test_transpose_data_handlers.cpp
RandomAccess/: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md
RandomAccess/configs/: Bittware_520N_IVDEP.cmake  Bittware_520N_IVDEP_RNG5.cmake  Bittware_520N_MX.cmake  Bittware_520N_MX_IVDEP.cmake  Intel_PAC_D5005_IVDEP.cmake  Intel_PAC_D5005_b1024.cmake  (+2 more)
STREAM/: .gitignore  CHANGELOG  CMakeLists.txt  README.md  results.txt
b_eff/: .gitignore  CHANGELOG  CMakeLists.txt  README.md
shared/: CMakeLists.txt  README.md  hpcc_benchmark.cpp  hpcc_benchmark.hpp  hpcc_settings.cpp
(+367 files in other folders)
